Fix name wrapping and animation

--- a/static/css/new-home.css
+++ b/static/css/new-home.css
@@ -60,7 +60,6 @@ body {
                 #links img:hover {
                     box-shadow: 0px 0px 8px #555;
 }
-            
 
     #name-box {
         display: flex;
@@ -68,24 +67,26 @@ body {
         margin-top: 25px;
         text-align: center;
         }
-        
+
         #name-box > h1 {
             margin: 8px 0 20px 0;
             font-size: 28pt;
             color: var(--light-text-color);
         }
-        
+
         /* Part of scrolling animation as well */
         #name-box div span,
         #position-roller li {
             vertical-align: top;
-            font-size: 20pt;
+            font-size: 26px;
+            height: 32px;
+            line-height: 32px;
             color: var(--light-text-color);
         }
 
         #position-roller {
             display: inline-block;
-            height: calc(20pt + 6px);
+            height: 32px;
             margin: 0;
             padding-left: 0;
             overflow: scroll;
@@ -101,13 +102,9 @@ body {
 
             #position-roller li {
                 display: block;
-                margin-bottom: 4px;
+                margin-bottom: 6px;
                 text-align: start;
                 scroll-snap-align: start;
-                }
-                
-                #position-roller li:last-of-type {
-                    /* margin-bottom: 0; */
         }
 
         @media (min-width: 1025px) {
@@ -116,7 +113,7 @@ body {
             }
         }
 
-        @media (min-width: 840px) {
+        @media (min-width: 878px) {
             #top {
                 flex-direction: row;
                 }
@@ -178,7 +175,7 @@ body {
                 .portfolio-item .portfolio-img-container a {
                     display: flex;
             }
-            
+
             .portfolio-item p,
             .portfolio-item li {
                 font-size: .88em;
